--- a/style.css
+++ b/style.css
@@ -12,52 +12,48 @@ body{
 
 header{
     background-color: lightblue;
-    width: 100%;
-    min-height: 100px;
-
-
+   
 }
 
 .boxed{
-    background-color: red;
-    max-width: 700px;
+    max-width: 1000px;
     margin: 0 auto;
 
-
-
-
 }
-
 
 .flex-container{
     display: flex;
-    max-width: 700px;
+    height: 50px;
     
-
-
-
-
-
 }
 
-.logo{
+#header-container{
+    background-color: orange;
+}
+
+.dashed{
+    border: dashed 2px black;
+   
+}
+
+.nav-logo{
+    color: black;
     width: 25%;
-    padding: 20px;
-   
-   
+   padding: 15px;
 
 }
-.link{
+
+.nav-links{
+    color: black;
     width: 50%;
-     padding: 20px;
-   
+    padding: 15px;
     
 
 }
 
-.login{
+.nav-login{
+    color: black;
     width: 25%;
-     padding: 20px;
+    padding: 15px;
 
 }
-
