--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 
 header{
     background-color: lightblue;
+    padding: 20px 0 5px 0;
    
 }
 
@@ -24,6 +25,7 @@ header{
 .flex-container{
     display: flex;
     height: 50px;
+    
     
 }
 
@@ -40,6 +42,7 @@ header{
     color: black;
     width: 25%;
    padding: 15px;
+   text-align: left;
 
 }
 
@@ -47,7 +50,7 @@ header{
     color: black;
     width: 50%;
     padding: 15px;
-    
+    text-align: center;
 
 }
 
@@ -55,5 +58,18 @@ header{
     color: black;
     width: 25%;
     padding: 15px;
+    text-align: right;
 
+}
+
+.flex-container-blue{
+    background-color: blue;
+    min-height: 350px;
+    margin-top: 10px;
+    padding: 30px;
+}
+.nav-pink{
+    background-color: darkorchid;
+    max-width: 700px;
+    min-height: 300px;
 }
