--- a/style.css
+++ b/style.css
@@ -111,3 +111,39 @@ section{
     min-width: 1000px;
     min-height: 700px;
 }
+
+#spacing{
+    background-color: gray;
+    height: 3px;
+    margin-top: 20px;
+}
+.small-column-coral{
+    background-color: coral;
+    min-height: 300px;
+    width: 40%;
+}
+.flex-container-big-column-aqua{
+    display: flex;
+    background: aqua;
+    width: 60%;
+    min-height: 300px;
+    
+    
+}
+
+footer{
+    padding-top: 10px;
+}
+
+.nav-column{
+    min-width: 150px;
+    min-height: 300px;
+    
+}
+
+.dashed-white{
+    border: dashed 1px white;
+}
+
+
+
